fixed incorrect value to self-align in style second section

--- a/style-second-section.css
+++ b/style-second-section.css
@@ -33,7 +33,7 @@ button {
     h2 {
         display: flex;
         font-size: 2.5rem;
-        align-self: left;
+        align-self: flex-start;
     }
 
     button {
